--- a/view/frontend/templates/widget/page-list.phtml
+++ b/view/frontend/templates/widget/page-list.phtml
@@ -4,7 +4,6 @@
 use Magebit\PageListWidget\Block\Widget\PageList;
 use Magebit\PageListWidget\Model\Config\Source\CmsPages;
 
-$baseUrl = $block->getBaseUrl();
 ?>
 
 <h3><?= $block->escapeHtml($block->getData($block::PARAMETER_TITLE)) ?></h3>
@@ -12,7 +11,7 @@ $baseUrl = $block->getBaseUrl();
 <ul>
     <?php foreach ($block->getCmsPages() as $page): ?>
         <?php
-        $pageLink = $baseUrl . $page[CmsPages::PAGE_VALUE];
+        $pageLink = $block->urlBuilder->getUrl($page[CmsPages::PAGE_VALUE]);
         $pageLabel = $page[CmsPages::PAGE_LABEL];
         ?>
         <li>
